welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
if(!estFaceMur){avance();}
getCouleurSol();
if(!estFaceMur){recule();}
if (Color.green){return true;}else{return false;}
}        
